# vibe-coding-risk

./: .env.example  .gitignore  PAPER_METHOD_RESULTS.md  README.md  pyproject.toml
.github/workflows/: github-pages.yml
analysis/prompts/: attribution_judge_v1.md  cwe_reason_judge_v1.md  cwe_verify_v1.md  judge_v1.md
analysis/rules/: cwe_seed.yaml
analysis/schema/: candidate_record.schema.json  risk_finding.schema.json
analysis/scripts/: analyze_attribution_patterns.py  analyze_code_risk_subset.py  analyze_trajectory_metrics.py  backtrace_risky_user_context.py  build_cwe_catalog.py  build_risk_explorer_data.py  cwe_reference.py  export_risk_dataset.py  extract_candidates.py  generate_paper_figures.py  judge_attribution_openrouter.py  judge_openrouter.py  risk_dedup.py  run_rule_scan.py  run_static_hybrid.py
risk_annotator/: README.md  app.js  index.html  styles.css
risk_explorer/: README.md  app.js  index.html  styles.css
